@@ -27,7 +27,12 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.*;
+import java.nio.ByteBuffer;
+import java.nio.CharBuffer;
+import java.nio.charset.*;
 import java.util.concurrent.CompletableFuture;
+import java.text.Normalizer;
+import java.util.regex.Pattern;
 
 public class ReadFile implements Tool<ReadFileInput, ToolStatus> {
     
@@ -85,10 +90,24 @@ public class ReadFile implements Tool<ReadFileInput, ToolStatus> {
                 if (!Files.exists(filePath)) {
                     return new ToolStatusWrapper("File not found: " + filePath, false);
                 }
-                String content = Files.readString(filePath, StandardCharsets.UTF_8);
-                modelContextManager.addEntry(new ContextEntry(ContextEntry.Type.TOOL, "{\"name\":" + "\"" + getName() + "\",\"input\":" + input.getOriginalJson().toString() + "}"));
-                userContextManager.addEntry(new ContextEntry(ContextEntry.Type.TOOL, "{\"name\":" + "\"" + getName() + "\",\"input\":" + input.getOriginalJson().toString() + "}"));
-                return new ToolStatusWrapper(content, true);
+                byte[] rawBytes = Files.readAllBytes(filePath);
+
+                // Step 2: Decode safely with UTF-8 and replace invalid characters
+                CharsetDecoder decoder = StandardCharsets.UTF_8
+                        .newDecoder()
+                        .onMalformedInput(CodingErrorAction.REPLACE)
+                        .onUnmappableCharacter(CodingErrorAction.REPLACE);
+
+                CharBuffer decodedBuffer = decoder.decode(ByteBuffer.wrap(rawBytes));
+                String safeContent = decodedBuffer.toString();
+
+                // Step 3: Normalize Unicode to NFC form
+                safeContent = Normalizer.normalize(safeContent, Normalizer.Form.NFC);
+
+                // Step 4: Escape for JSON (minimalist version)
+                modelContextManager.addEntry(new ContextEntry(ContextEntry.Type.TOOL, "{\"tool\":" + "\"" + getName() + "\",\"input\":" + input.getOriginalJson().toString() + "}"));
+                userContextManager.addEntry(new ContextEntry(ContextEntry.Type.TOOL, "{\"tool\":" + "\"" + getName() + "\",\"input\":" + input.getOriginalJson().toString() + "}"));
+                return new ToolStatusWrapper(safeContent, true);
             } catch (IOException e) {
                 return new ToolStatusWrapper("IO error: " + e.getMessage(), false);
             } catch (Exception e) {
